rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x284_1997_TLM.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x284_1997_TLM.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod tlm {
    extern crate alloc;
    use super::asn1_defined_types_module::NameType;
    use super::attribute_asn1_module::COMMUNICATIONS_PROTOCOL_ERROR;
    use super::cmip_1::BaseManagedObjectId;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Boolean(pub bool);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ConnectionDirectionSyntax {
        outgoing = 0,
        incoming = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum DeletionCauseSyntax {
        protocolError = 0,
        networkServiceProvider = 1,
        remoteCongestion = 3,
        localCongestion = 4,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct Integer(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct LocalDistinguishedName(pub BaseManagedObjectId);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct LocalDistinguishedNames(pub SetOf<LocalDistinguishedName>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated, identifier = "NC-COLSyntax")]
    pub enum NCCOLSyntax {
        #[rasn(identifier = "nc-COL0")]
        nc_COL0 = 0,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated, identifier = "NC-PREFSyntax")]
    pub enum NCPREFSyntax {
        highest = 0,
        medium = 1,
        lowest = 3,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated, identifier = "NC-RECSyntax")]
    pub enum NCRECSyntax {
        pleaseDoNotRecover = 0,
        pleaseRecover = 1,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "NC-REFSyntax")]
    pub struct NCREFSyntax(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated, identifier = "NC-RightSyntax")]
    pub enum NCRightSyntax {
        #[rasn(identifier = "my-side")]
        my_side = 1,
        #[rasn(identifier = "remote-side")]
        remote_side = 2,
        #[rasn(identifier = "both-sides")]
        both_sides = 3,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct NamingString(pub GraphicString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct OctetString(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, size("1..=255"))]
    pub struct PDUHeaderSyntax(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum ProtocolClassSyntax {
        class0 = 0,
        class1 = 1,
        class2 = 2,
        class3 = 3,
        class4 = 4,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ProtocolClassesSyntax(pub SetOf<ProtocolClassSyntax>);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ReasonCodeSyntax(pub Integer);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct SourceAddressSyntax(pub OctetString);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum SourceOfAllocationSyntax {
        local = 0,
        remote = 1,
    }
    pub static ACOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[9u32]].concat()).unwrap().to_owned());
    pub static AGOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[8u32]].concat()).unwrap().to_owned());
    pub static AOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[7u32]].concat()).unwrap().to_owned());
    pub static CLMODE_TPMID_VALUE: LazyLock<GraphicString> =
        LazyLock::new(|| GraphicString::try_from(String::from("CLTPM")).unwrap());
    pub static COMODE_TPMID_VALUE: LazyLock<GraphicString> =
        LazyLock::new(|| GraphicString::try_from(String::from("COTPM")).unwrap());
    pub static INCOMING_CONNECTION_REJECTED_TYPE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***SSEOI, &[4u32, 2u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static MOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[3u32]].concat()).unwrap().to_owned());
    pub static NBOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[6u32]].concat()).unwrap().to_owned());
    pub static NOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[10u32]].concat()).unwrap().to_owned());
    pub static POI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[4u32]].concat()).unwrap().to_owned());
    pub static PROI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[5u32]].concat()).unwrap().to_owned());
    pub static SSEOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***TLOI, &[0u32]].concat()).unwrap().to_owned());
    pub static SUCCESSFUL_CONNECTION_ESTABLISHMENT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***SSEOI, &[4u32, 1u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static TLOI: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 14u32, 0u32]).to_owned());
    pub static TRANSPORT_SUBSYSTEM_ID_VALUE: LazyLock<GraphicString> =
        LazyLock::new(|| GraphicString::try_from(String::from("TransportSubsystem")).unwrap());
}
