rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x402_1999_MHSObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x402_1999_MHSObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod mhsobject_identifiers {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate)]
    pub struct ID(pub ObjectIdentifier);
    #[doc = " Message Store"]
    #[doc = " See ITU-T Rec. X.413 | ISO/IEC 10021-5."]
    pub static ID_ARCH: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 5u32]).to_owned()));
    #[doc = " Reserved."]
    pub static ID_EDIMS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 7u32]).to_owned()));
    #[doc = " Overall Architecture"]
    #[doc = " See this Specification."]
    pub static ID_GROUP: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 6u32]).to_owned()));
    #[doc = " MHS Application Contexts and Protocols"]
    #[doc = " See ITU-T Rec. X.419 | ISO/IEC 10021-6."]
    pub static ID_IPMS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 1u32]).to_owned()));
    #[doc = " EDI Messaging"]
    #[doc = " See ITU-T Rec. X.435 | ISO/IEC 10021-9."]
    pub static ID_MANAGEMENT: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 9u32]).to_owned()));
    #[doc = " MHS Aspects"]
    pub static ID_MHS_PROTOCOLS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 0u32]).to_owned()));
    #[doc = " Message Transfer System"]
    #[doc = " See ITU-T Rec. X.411 | ISO/IEC 10021-4."]
    pub static ID_MS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 4u32]).to_owned()));
    #[doc = " Interpersonal Messaging"]
    #[doc = " See ITU-T Rec. X.420 | ISO/IEC 10021-7."]
    #[doc = "  Value {joint-iso-itu-t mhs(6) 2} is no longer defined"]
    pub static ID_MTS: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 3u32]).to_owned()));
    #[doc = " MHS Management"]
    #[doc = " See ITU-T Recs. X.460 - X.467 | ISO/IEC 11588."]
    pub static ID_ROUTING: LazyLock<ID> =
        LazyLock::new(|| ID(Oid::const_new(&[2u32, 6u32, 10u32]).to_owned()));
}
