rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x411_1999_MTSAbstractService.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x411_1999_MTSAbstractService.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 290, column 2]
     │
     │ 
 289 │  --	Submission Port
 290 │  message-submission ABSTRACT-OPERATION ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 291 │    ARGUMENT         MessageSubmissionArgument
 292 │    RESULT           MessageSubmissionResult
 293 │    ERRORS
 294 │      {submission-control-violated | element-of-service-not-subscribed |
 295 │        originator-invalid | recipient-improperly-specified |
 296 │        inconsistent-request | security-error | unsupported-critical-function |
 297 │        remote-bind-error}
 298 │    LINKED           {operationObject1, ...}
 299 │    INVOKE PRIORITY  {4 | 6 | 7}
 300 │    CODE             op-message-submission
 301 │  }
     │
─────╯
