rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x411_1999_MTSAbstractService88.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x411_1999_MTSAbstractService88.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 116, column 2]
     │
     │ 
 116 │  DeliveryControls88 ::= SET { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 117 │    COMPONENTS OF
 118 │      Controls
 119 │        (WITH COMPONENTS {
 120 │           ...,
 121 │           permissible-encoded-information-types  ABSENT
 122 │         }),
 123 │    permissible-encoded-information-types-88  EncodedInformationTypes OPTIONAL
 124 │  }
 126 │  --	Administration Port
     │
─────╯
